Fix err color, it's not legible
But then also just change the code lang,
because that line isn't even an error.

--- a/assets/monokai.css
+++ b/assets/monokai.css
@@ -1,7 +1,7 @@
 .highlight pre { background-color: #272822; color: #f8f8f2 }
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
-.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
+.highlight .err { color: #ff9ed1; } /* Error */
 .highlight .k { color: #66d9ef } /* Keyword */
 .highlight .l { color: #ae81ff } /* Literal */
 .highlight .n { color: #f8f8f2 } /* Name */
